--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
   <div class="container">
     <h1>Portafolio de Ejercicios</h1>
     <ul>
-      <li><a href="ejercicio01-tema1-apartado1-5-2/index.html">Ejercicio 01 - Tema 1 Apartado 1.5.2</a></li>
+      <li><a href="Ejercicio01/index.html">Ejercicio 01 - Tema 1 Apartado 1.5.2</a></li>
       <li><a href="ejercicio02-tema2-apartado2-4-1/index.html">Ejercicio 02 - Tema 2 Apartado 2.4.1</a></li>
-      <li><a href="ejercicio-03 Tema-3-Apartado-3-3 Tienda online/index.html">Ejercicio 03 - Tema 3 Apartado 3.3</a></li>
+      <li><a href="ejercicio-03-Tema-3-Apartado-3-1-3/index.html">Ejercicio 03 - Tema 3 Apartado 3.3</a></li>
     </ul>
   </div>
+
 </body>
 </html>
