Ejercicio 1 index areglado

--- a/Ejercicio-01/index.html
+++ b/Ejercicio-01/index.html
@@ -39,7 +39,7 @@
 
     <section id="sobre-mi">
       <h2>Sobre mí</h2>
-      <p>Mi nombre es [Tu Nombre]. Estoy aprendiendo a crear páginas web usando HTML.</p>
+      <p>Mi nombre es Ruslan. Estoy aprendiendo a crear páginas web usando HTML.</p>
     </section>
 
     <section id="servicios">
